<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_in_login"
        android:id="@+id/textview1"
        android:fontFamily="@font/lato_black"
        android:textColor="#366ce0"
        android:textSize="25sp"
        android:layout_marginStart="40dp"
        android:gravity="center"
        android:layout_marginTop="180dp">

    </androidx.appcompat.widget.AppCompatTextView>


    <View
        android:id="@+id/View1"
        android:layout_width="80dp"
        android:layout_height="7dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#366ce0"
        android:elevation="10dp"
        android:layout_alignStart="@id/textview1"
        android:layout_below="@+id/textview1">
    </View>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card2"
        android:visibility="visible"
        android:layout_marginTop="30dp"
        android:layout_below="@id/View1"
        android:padding="20dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="7dp"
        android:background="@drawable/circular_card"
        app:cardCornerRadius="7dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_mail_text_view_login"
                android:fontFamily="@font/lato_black"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatTextView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/lato_bold"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_mail_text_view_pass"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/lato_black"
                android:textSize="20sp"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatTextView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_password"
                    android:fontFamily="@font/lato_bold"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio1"
                android:text="@string/remember_me"
                android:fontFamily="@font/lato_black"
                android:layout_marginStart="20dp"
                android:textStyle="normal"
                android:textSize="15sp"
                android:textColor="#366ce0">

            </androidx.appcompat.widget.AppCompatCheckBox>


            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/lato_black"
                android:layout_gravity="end"
                android:background="@null"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />


            <Button
                android:id="@+id/btn_login"
                android:layout_width="150dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/lato_black"
                android:background="@drawable/button_circular"
                android:text="@string/btn_login"
                android:gravity="center"
                android:elevation="2dp"
                android:textColor="#ffff" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/circular_coloured_button"
                android:text="@string/btn_link_to_register"
                android:fontFamily="@font/lato_black"
                android:textAllCaps="false"
                android:textColor="@color/fui_linkColor"
                android:textSize="15sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/loader1"
            style="@style/AVLoadingIndicatorView.Large"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:elevation="10dp"
            android:visibility="gone"
            app:indicatorColor="@android:color/holo_orange_light"
            android:layout_gravity="center|top"
            app:indicatorName="BallScaleMultipleIndicator" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>
</ScrollView>